[gd_scene load_steps=5 format=3 uid="uid://b1fxhocy7hjg7"]

[ext_resource type="Script" path="res://prog_88a.gd" id="1_2q7yc"]
[ext_resource type="Theme" uid="uid://b16mm2uf5waty" path="res://Big_Font.tres" id="2_pg8w4"]

[sub_resource type="LabelSettings" id="LabelSettings_4yi4u"]
font_size = 38

[sub_resource type="LabelSettings" id="LabelSettings_0brjw"]
font_size = 38

[node name="prog_88a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2q7yc")

[node name="txtNum1" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 382.0
offset_top = 50.0
offset_right = 512.0
offset_bottom = 119.0

[node name="txtNum2" type="TextEdit" parent="."]
offset_left = 586.0
offset_top = 29.0
offset_right = 716.0
offset_bottom = 98.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 53.0
offset_right = 223.0
offset_bottom = 96.0
text = "put numbers here"
label_settings = SubResource("LabelSettings_4yi4u")
horizontal_alignment = 2

[node name="lblAns" type="Label" parent="."]
offset_left = 51.0
offset_top = 121.0
offset_right = 1129.0
offset_bottom = 451.0
label_settings = SubResource("LabelSettings_0brjw")

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 540.0
offset_right = 220.0
offset_bottom = 632.0
theme = ExtResource("2_pg8w4")
text = "Calc"

[node name="btnClear" type="Button" parent="."]
offset_left = 276.0
offset_top = 535.0
offset_right = 432.0
offset_bottom = 627.0
theme = ExtResource("2_pg8w4")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
offset_left = 475.0
offset_top = 520.0
offset_right = 631.0
offset_bottom = 612.0
theme = ExtResource("2_pg8w4")
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
